--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.0.0",
-    "vue": "^3.2.37",
-    "vue-router": "^4.0.13"
+    "axios": "^1.7.4",
+    "vue": "^3.4.37",
+    "vue-cookies": "^1.8.4",
+    "vue-pdf-embed": "^1.2.1",
+    "vue-router": "^4.4.3"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "autoprefixer": "^10.4.12",
-    "postcss": "^8.4.17",
-    "tailwindcss": "^3.1.8",
-    "vite": "^3.1.0"
+    "@vitejs/plugin-vue": "^3.2.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10",
+    "vite": "^3.2.10"
   }
 }
